# architecture_software_systems

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: c-cpp.yml
application/: CMakeLists.txt
code/: counter.h  execution_status.h  order.cpp  order.h  ordermanager.cpp  ordermanager.h  orderstack.cpp  orderstack.h
code/Application/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
code/Client/: client.cpp  client.h
code/EventManager/: eventmanager.cpp  eventmanager.h
code/Order/: counter.cpp  counter.h  execution_status.h  order.cpp  order.h
code/OrderManager/: ordermanager.cpp  ordermanager.h
code/OrderStack/: orderallocator.cpp  orderallocator.h  orderstack.cpp  orderstack.h
code/Robot/: robot.cpp  robot.h
code/WarehouseManager/: warehousemanager.cpp  warehousemanager.h
code/application/: mainwindow.ui
mapping/: bpmn.txt  class_diagram.txt  sequence.txt
test/: test_client.cpp  test_order.cpp  test_order_manager.cpp  test_order_stack.cpp  test_robot.cpp  test_warehouse_manager.cpp
test/code/: mockordermanager.cpp  mockordermanager.h
